# eatpy

./: README.md  pyproject.toml  setup.cfg
src/bibigo/: __init__.py  exceptions.py  scripts.py  utils.py
src/bibigo/files/: setup.cfg.default
src/bibigo/init/: docker_compose.py  package.py  settings.py
src/bibigo/static/: Dockerfile.default  __init__.py.default  docker-compose.yml.default  example.py.default  pyproject.toml.default  scripts.py.default  setup.cfg.default
src/eatpy/aws/: ssm.py
src/eatpy/default_files/: __init__.py  _dockerignore.py  _gitignore.py  settings_json.py
src/eatpy/default_files/aws_lambda/: app_py.py  build_and_test_sh.py  buildfile.py  buildfile_conda.py  environment_yml.py  task_py.py
src/eatpy/default_files/package/: pyproject_toml.py  setup_cfg.py
src/eatpy/scripts/: scripts.py
src/eatpy/templates/: aws_lambda.py  common.py  lambda.py  package.py  settings.py
src/pie/scripts/: scripts.py
src/pie/templates/: package.py
test/: docker-compose.yml
