[metadata]
name = eatpy
description = eat py not pie
long_description = file: README.metadata
author = Woojin Cho
author_email = woojin.cho@gmail.com

[options]
python_requires = >=3.8
packages = find:
package_dir =
    = src
install_requires = 
    boto3
    ipython
    click
    PyInquirer
    rich
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    eatpy = eatpy.scripts.scripts:eatpy