[metadata]
name = bibigo
description = python templates
long_description = file: README.metadata
author = Woojin Cho
author_email = w.cho@cj.net

[options]
python_requires = >=3.8
packages = find:
package_dir =
    = src
install_requires = 
    rich
    click
    boto3
    # prompt_toolkit
    # prompt_toolkit==1.0.14
    # PyInquirer
    InquirerPy
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* =
    static/**/*
    static/**/.*
    static/.**/*
    static/.**/.*

[options.entry_points]
console_scripts =
    bibigo = bibigo.scripts:bibigo